@@ -12,6 +12,7 @@ Version 1.1.10 work in progress
 - Bug #3096: Fixed the bug when reporting an error and CHtml is not loaded (mdomba)
 - Bug #3103: Fixed the bug that CActiveForm->error() was not overloading htmlOptions (mdomba)
 - Enh #3063: Gii, when generating models, tableNames will be checked against reserved PHP keywords when '*' is used (mdomba)
+- Enh #3101: The methods of CSecurityManager do now work correctly for the case that mbstring.func_overload is in effect (Y!!)
 - Enh #3112: Fixed the exception error display on ajax calls when YII_DEBUG is true (mdomba)
 - Enh: Added CActiveForm::validateTabular() to simplify ajax validation for tabular input (mdomba)
 - Chg: Upgraded JQuery UI to 1.8.17 (mdomba)
